[package]
name = "keysort"
version = "0.1.0-alpha.2B"
edition = "2018"
authors = ["Wren Hainsworth <hainsworthwren@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Sort files/folders into character assigned directories"
readme = "readme.md"
homepage = "https://github.com/UnciaBit/KeySort-cli"
repository = "https://github.com/UnciaBit/KeySort-cli"
keywords = ["cli", "alpha","filesystem","sort","utility"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.2.0"
crossterm = "0.22.1"